@@ -392,6 +392,25 @@
 #define __NR_getrandom          355
 #define __NR_memfd_create       356
 #define __NR_bpf                357
+#define __NR_execveat           358
+#define __NR_socket             359
+#define __NR_socketpair         360
+#define __NR_bind               361
+#define __NR_connect            362
+#define __NR_listen             363
+#define __NR_accept4            364
+#define __NR_getsockopt         365
+#define __NR_setsockopt         366
+#define __NR_getsockname        367
+#define __NR_getpeername        368
+#define __NR_sendto             369
+#define __NR_sendmsg            370
+#define __NR_recvfrom           371
+#define __NR_recvmsg            372
+#define __NR_shutdown           373
+#define __NR_userfaultfd        374
+#define __NR_membarrier         375
+#define __NR_mlock2             376
 
 #endif /* __VKI_SCNUMS_X86_LINUX_H */
 
